fixed stretched image

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -16,8 +16,7 @@ html {
 }
 img{
   display: block;
-  max-height: 70%;
-  max-width: 70%;
+  max-width: 100%;
 }
 /*adjusting text and image sizes for different sizes*/
 /* Mobile View */
@@ -150,10 +149,12 @@ ul{
 #family2 ,#family3, #family4{
   display: none;
   align-items:flex-start;
+  align-self: center;
 }
 #family1{
   display: flex;
   align-items: flex-start;
+  align-self: center;
 }
 #prev{
   display: flex;
